# libtorrent-build

./: CMakeLists.txt
include/libtorrent/aux_/: win_cng.hpp
mingw-dep/: CMakeLists.txt
mingw-dep/src/: dru_mingw_dep.cpp  dru_mingw_dep.hpp
